# NN-VIPSS

./: .gitignore  LocalVipss.sln  LocalVipss.vcxproj  LocalVipss.vcxproj.filters  README.md  ReadMe.md  VIPSS_LOCAL.sln  VIPSS_LOCAL.vcxproj  VIPSS_LOCAL.vcxproj.filters
3rd/nlopt/lib/: nlopt.exp
data/bar_chair/: bar_chair.ply  bar_chair_opt.ply  bar_chair_opt_color.ply
data/bathtub/: input.ply  input_normal.ply
data/doghead/: doghead4k.node  doghead_oriented_ns1.ply  doghead_origin_ns.ply  doghead_origin_ns1.ply
data/doghead_wire/: doghead_wire.node  doghead_wire_oriented_ns.ply  doghead_wire_origin_ns.ply  doghead_wire_origin_ns1.ply
data/dragon/: dragon.node  dragon.ply  dragon_opt.ply  dragon_opt_color.ply  dragon_oriented_ns.ply  dragon_origin_ns.ply  dragon_origin_ns1.ply
data/fertility/: input.ply
data/gt_normal/: Saxilby_Memorial_Helmet_30k_monte.xyz  Saxilby_Memorial_Helmet_50k_monte.xyz  bathtub_1k.xyz  brain_Ih_white_50k_monte.xyz  chair36.xyz  plate_mont3k.xyz  statue_delaunay_50k_monte.xyz  torus_crosscut.xyz  torus_halfsample.xyz  torus_n50.xyz  torus_wires.xyz
data/hand_ok/: hand_ok_out_ptn.ply  input_ptn.ply
data/noise_kitten/: input.ply
data/noise_kitten/kitten_h004.001/: input_ptn.ply
data/old/: rotate_ovals.xyz  rotate_ovals2.xyz  rotate_ovals2_normal.ply
data/old/hand_ok/: input_normal.ply  input_surface.ply
data/old/phone/: input.ply
data/old/planck/multisample_n2000/: input_normal.ply
data/old/planck/multisample_n500/: input_normal.ply
data/old/torus/: circle_torus_points_normal.ply
data/old/torus/multisample_n50/: input_normal.ply  input_normal_flip.ply  noise_gradients.ply  noise_normal.ply
data/old/walrus/: input.ply  input0.ply
data/old/wireframes/doghead/: input.ply
data/old/wireframes/phone/: input.ply
data/old/wireframes/spring/: input.ply
data/old/wireframes/trebol/: input.ply
data/phone/: input_ptn.ply
data/planck/multisample_n1000/: input_normal.ply
data/planck/multisample_n4000/: input_normal.ply
data/planck/multisample_n500/: input_ptn.ply
data/points/: Saxilby_Memorial_Helmet_30k_monte.xyz  bathtub_1k.xyz  brain_Ih_white_50k_monte.xyz  chair36.xyz  doghead.xyz  hand_ok.xyz  lord_quas.xyz  torus_halfsample.xyz  torus_n50.xyz  torus_wires.xyz  walrus.xyz
data/torus/: circle_torus_points.xyz
data/torus/multisample_n50/: noise_normal_30d.ply  noise_normal_60d.ply
data/torus/parallelcut/: input.ply
data/walrus/: input_normal.ply  input_ptn.ply  input_surface.ply  nn_surface.ply  walrus.node  walrus_opt.ply  walrus_opt_color.ply  walrus_oriented_ns.ply  walrus_origin_ns.ply  walrus_origin_ns1.ply
tools/: Cal_torus.py  cal_sample_pt_normal.py  compare_mesh.py  compare_normal.py  convex_hull.py  horse_uneven_gt.xyz  kitten_add_noise.py  kitten_resize.py  kitten_sample_combine.py  normalize.py  plate_sample.py  plate_sample2.py  point_sample.py  process_torus.py  refine_obj.py  torus_gt_normal.py  torus_sample.py
tools/plot/: kitten_iteration.py  kitten_iteration_res.py  kitten_memory.py  plot_color_bar.py  plot_kitten_nor_timing_lv.py  plot_kitten_nor_timing_lv_large.py  plot_kitten_nor_timing_lv_large_surface.py  plot_kitten_nor_timing_lv_large_surfacead.py  plot_kitten_nor_timing_vipss.py  plot_torus_wire_timing.py  time_plot.py  time_plot2.py  time_plot_kitten_adgrid.py  time_plot_kitten_adgrid_poisson.py  time_plot_kitten_adgrid_threshold.py  time_plot_kitten_insert.py
tools/sample/: torus_wire_sample.py
vipss/: CMakeLists.txt  add_noise_ply.py  convert_ply_node.py  main.cpp  makefigure.sh  test_time.cpp
vipss/3rd/armadillo/examples/: example1_win64.vcxproj
vipss/3rd/include/gurobi/: gurobi_c++.h  gurobi_c.h
vipss/3rd/include/nlopt/: nlopt.hpp
vipss/adgrid/: ankerl.unordered_dense.cpp  io.cpp  iso_surface.cpp  load_functions.cpp
vipss/adgrid/include/: predicates.h
vipss/adgrid/include/adgrid/: grid_mesh.h  subdivide_multi.h
vipss/adgrid/include/implicit_functions/: Hermite_RBF.h  load_functions.h
vipss/adgrid/include/nanothread/: nanothread.h
vipss/adgrid/mshio/: element_utils.cpp  io_utils.cpp
vipss/adgrid/nanothread/: nanothread.cpp  queue.cpp
vipss/adgrid/predicates/: predicates.c
vipss/src/: CMakeCache.txt  SimpleOctree.cpp  SimpleOctree.h  Solver.cpp  Solver.h  adgrid copy.h  adgrid.cpp  adgrid.h  cmake_install.cmake  color.h  happly.h  incremental_vipss.cpp  incremental_vipss.h  kdtree.cpp  kdtree.hpp  kernel.cpp  kernel.h  local_vipss.cpp  local_vipss.hpp  marching3D.cpp  marching3D.h  orient_normal.cpp  orient_normal.h  pico_tree.cpp  pico_tree.h  predicates.cxx  pt_cluster.cpp  pt_cluster.h  pt_vipss.cpp  pt_vipss.h  rbf_Hermite.cpp  rbf_api.cpp  rbf_api.h  rbf_interface.cpp  rbfcore.cpp  rbfcore.h  readers.cpp  readers.h  sample.cpp  sample.h  (+18 more)
vipss/src/adgrid/: adaptive_grid_gen.h  grid_mesh.cpp  grid_mesh.h  grid_refine.cpp  grid_refine.h  gridgen.cpp  gridgen.h  io.cpp  io.h  io_ad.cpp  io_ad.h  main.cpp  refine_crit.cpp  refine_crit.h  tet_quality.cpp  tet_quality.h  timer.cpp  timer.h
vipss/src/adgrid_headers/: contains.h
vipss/src/adgrid_headers/adgrid/: grid_mesh.h  iso_surface.h  subdivide_multi.h
vipss/src/surfacer/: ImplicitedSurfacing.cpp  ImplicitedSurfacing.h  Polygonizer.h  WINSystemDefines.H  polygonizer.cpp
vipss/src/surfacer/utils/: Mesh_Array.H  Rn_Affine1.H  Rn_Affine2.H  Rn_Affine3.H  Rn_Affine4.H  Rn_CoVector1_i.H  Rn_CoVector2_i.H  Rn_CoVector3_i.H  Rn_CoVector4_i.H  Rn_Defs.H  Rn_Io1_i.H  Rn_Io2_i.H  Rn_Io3_i.H  Rn_Io4_i.H  Rn_Matrix2_i.H  Rn_Matrix3_i.H  Rn_Matrix4_i.H  Rn_Point1_i.H  Rn_Point2_i.H  Rn_Point3_i.H  Rn_Point4_i.H  Rn_Unary4_i.H  Rn_Vector1_i.H  Rn_Vector2_i.H  Rn_Vector3_i.H  Rn_Vector4_i.H
vipss/tools/: Cal_torus.py  ICP.py  convert_ply_node.py  gt_normal.py  point_sample.py  refine_obj.py  sampled_point_cloud_with_normals.xyz  test.py  time_plot2_single.py
